--- a/Index.html
+++ b/Index.html
@@ -77,7 +77,7 @@
                     <div class="details-container">
                         <img src="./assets/education.png" alt="Experience icon" class="icon">
                         <h3>Education</h3>
-                        <p>B.Tech Bachelors in Computer Science </p>
+                        <p>B.Tech in Computer Science </p>
                     </div>
                 </div>
                 <div class="text-container">
