--- a/Index.html
+++ b/Index.html
@@ -185,25 +185,27 @@
             <div class="about-containers">
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/project-1.png" alt="Project 1" class="project-img">
+                        <img src="./assets/weather-project.jpg" alt="Project 1" class="project-img">
                     </div>
-                    <h2 class="experience-sub-title project-title">Project One</h2>
+                    <h2 class="experience-sub-title project-title">React Weather App</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/'">Github</button>
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Live
+                            onclick="location.href='https://github.com/adityaa-more/react-weather-app'">Github</button>
+                        <button class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://adityaa-more.github.io/react-weather-app/'">Live
                             Demo</button>
                     </div>
                 </div>
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/project-2.png" alt="Project 2" class="project-img">
+                        <img src="./assets/quiz-project.jpg" alt="Project 2" class="project-img">
                     </div>
                     <h2 class="experience-sub-title project-title">Project Two</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/'">Github</button>
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Live
+                            onclick="location.href='https://github.com/adityaa-more/QuizApp'">Github</button>
+                        <button class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://adityaa-more.github.io/QuizApp/'">Live
                             Demo</button>
                     </div>
                 </div>
