--- a/Index.html
+++ b/Index.html
@@ -200,7 +200,7 @@
                     <div class="article-container">
                         <img src="./assets/quiz-project.jpg" alt="Project 2" class="project-img">
                     </div>
-                    <h2 class="experience-sub-title project-title">Project Two</h2>
+                    <h2 class="experience-sub-title project-title">Online Quiz App</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
                             onclick="location.href='https://github.com/adityaa-more/QuizApp'">Github</button>
