--- a/Index.html
+++ b/Index.html
@@ -235,7 +235,7 @@
             </div>
             <div class="contact-info-container">
                 <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon">
-                <p><a href="https://github.com/adityaa-more">LinkedIn</a></p>
+                <p><a href="https://www.linkedin.com/in/aditya-more-myprofile/">LinkedIn</a></p>
             </div>
         </div>
     </section>
