--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="./assets/portfolio.png">
+    <link rel="icon" type="image/x-icon" href="./assets/user (2).png">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mediaqueries.css">
@@ -42,7 +42,7 @@
     </nav>
     <section id="profile">
         <div class="section__pic-container">
-            <img src="./assets/IMG_3600.png" alt="Aditya More profile picture" class="main_pic">
+            <img src="./assets/profile_pic_0.png" alt="Aditya More profile picture" class="main_pic">
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello I,m</p>
