--- a/Index.html
+++ b/Index.html
@@ -238,6 +238,10 @@
                 <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon">
                 <p><a href="https://www.linkedin.com/in/aditya-more-myprofile/">LinkedIn</a></p>
             </div>
+            <div class="contact-info-container">
+                <img src="./assets/whatsapp.png" alt="LinkedIn icon" class="icon contact-icon">
+                <p><a href="https://wa.me/918888052888?text=">WhatsApp</a></p>
+            </div>
         </div>
     </section>
     <footer>
