--- a/Index.html
+++ b/Index.html
@@ -49,7 +49,7 @@
             <h1 class="title">Aditya More</h1>
             <p class="section__text__p2">Frontend Developer</p>
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('./assets/resume.pdf')">Download
+                <button class="btn btn-color-2" onclick="window.open('./assets/Resume.pdf')">Download
                     CV</button>
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
             </div>
