--- a/Index.html
+++ b/Index.html
@@ -193,7 +193,7 @@
                         <button class="btn btn-color-2 project-btn"
                             onclick="location.href='https://github.com/adityaa-more/react-weather-app'">Github</button>
                         <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://adityaa-more.github.io/react-weather-app/'">Live
+                            onclick="location.href='https://get-live-weather.netlify.app/'">Live
                             Demo</button>
                     </div>
                 </div>
