--- a/Index.html
+++ b/Index.html
@@ -206,7 +206,7 @@
                         <button class="btn btn-color-2 project-btn"
                             onclick="location.href='https://github.com/adityaa-more/QuizApp'">Github</button>
                         <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://adityaa-more.github.io/QuizApp/'">Live
+                            onclick="location.href='https://sawaal-jawaab.netlify.app/'">Live
                             Demo</button>
                     </div>
                 </div>
