--- a/Index.html
+++ b/Index.html
@@ -214,11 +214,11 @@
                     <div class="article-container">
                         <img src="./assets/project-3.png" alt="Project 3" class="project-img">
                     </div>
-                    <h2 class="experience-sub-title project-title">Project Three</h2>
+                    <h2 class="experience-sub-title project-title">3D Portfolio</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/'">Github</button>
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Live
+                            onclick="location.href='https://github.com/adityaa-more/3d-portfolio">Github</button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://adityaa-more.github.io/3d-portfolio/'">Live
                             Demo</button>
                     </div>
                 </div>
