--- a/Index.html
+++ b/Index.html
@@ -49,7 +49,7 @@
             <h1 class="title">Aditya More</h1>
             <p class="section__text__p2">Frontend Developer</p>
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('./assets/Resume.pdf')">Download
+                <button class="btn btn-color-2" onclick="window.open('./assets/Aditya_More_CV.pdf')">Download
                     CV</button>
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
             </div>
@@ -212,7 +212,7 @@
                 </div>
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/project-3.png" alt="Project 3" class="project-img">
+                        <img src="./assets/project-3.jpg" alt="Project 3" class="project-img">
                     </div>
                     <h2 class="experience-sub-title project-title">3D Portfolio</h2>
                     <div class="btn-container">
