--- a/Index.html
+++ b/Index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mediaqueries.css">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="mediaqueries.css" />
 </head>
 
 <body>
@@ -42,22 +42,25 @@
     </nav>
     <section id="profile">
         <div class="section__pic-container">
-            <img src="./assets/profile_pic_0.png" alt="Aditya More profile picture" class="main_pic">
+            <img src="./assets/profile_pic_0.png" alt="Aditya More profile picture" class="main_pic" />
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello I,m</p>
             <h1 class="title">Aditya More</h1>
-            <p class="section__text__p2">Frontend Developer</p>
+            <p class="section__text__p2">Full Stack Developer</p>
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('./assets/Aditya_More_CV.pdf')">Download
-                    CV</button>
-                <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
+                <button class="btn btn-color-2" onclick="window.open('./assets/Aditya_More_CV.pdf')">
+                    Download CV
+                </button>
+                <button class="btn btn-color-1" onclick="location.href='./#contact'">
+                    Contact Info
+                </button>
             </div>
             <div id="socials-container">
                 <img src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon"
-                    onclick="location.href='https://www.linkedin.com/in/aditya-more-myprofile/'">
+                    onclick="location.href='https://www.linkedin.com/in/aditya-more-myprofile/'" />
                 <img src="./assets/github.png" alt="My Github profile" class="icon"
-                    onclick="location.href='https://github.com/adityaa-more'">
+                    onclick="location.href='https://github.com/adityaa-more'" />
             </div>
         </div>
     </section>
@@ -66,29 +69,31 @@
         <h1 class="title">About Me</h1>
         <div class="section-container">
             <div class="section__pic-container">
-                <img src="./assets/profile_pic_1.jpg" alt="Profile picture" class="about-pic">
+                <img src="./assets/IMG_62201.png" alt="Profile picture" class="about-pic" />
             </div>
             <div class="about-details-container">
                 <div class="about-containers">
                     <div class="details-container">
-                        <img src="./assets/experience.png" alt="Experience icon" class="icon">
+                        <img src="./assets/experience.png" alt="Experience icon" class="icon" />
                         <h3>Experience</h3>
-                        <p>2+ years <br />Frontend Development </p>
+                        <p>2+ years <br />Full Stack Web Development</p>
                     </div>
                     <div class="details-container">
-                        <img src="./assets/education.png" alt="Experience icon" class="icon">
+                        <img src="./assets/education.png" alt="Experience icon" class="icon" />
                         <h3>Education</h3>
-                        <p>B.Tech in Computer Science </p>
+                        <p>B.Tech in Computer Science</p>
                     </div>
                 </div>
                 <div class="text-container">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora totam ratione vel ipsam?
-                        Quisquam eum alias, vitae ipsa aperiam hic? Magnam voluptatum consequatur, inventore dicta
-                        doloremque, possimus perspiciatis voluptates sequi a est eum reiciendis.</p>
+                    <p id="about">
+                        Passionate full-stack developer with a knack for turning ☕ into code! From crafting dynamic web
+                        apps to taming algorithms, I blend creativity with functionality to build digital solutions that
+                        work like magic ⚙️. Let's connect and create something awesome together! 🖥️
+                    </p>
                 </div>
             </div>
         </div>
-        <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#experience'">
+        <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#experience'" />
     </section>
     <section id="experience">
         <p class="section__text__p1">Explore My</p>
@@ -99,45 +104,38 @@
                     <h2 class="experience-sub-title">Frontend Development</h2>
                     <div class="article-container">
                         <article>
-                            <img src="./assets/checkmark.png" alt="experience icon" class="icon">
+                            <img src="./assets/checkmark.png" alt="experience icon" class="icon" />
                             <div>
                                 <h3>HTML</h3>
                                 <p>Experienced</p>
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark.png" alt="experience icon" class="icon">
+                            <img src="./assets/checkmark.png" alt="experience icon" class="icon" />
                             <div>
                                 <h3>CSS</h3>
                                 <p>Experienced</p>
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark.png" alt="experience icon" class="icon">
+                            <img src="./assets/checkmark.png" alt="experience icon" class="icon" />
                             <div>
-                                <h3>SASS</h3>
+                                <h3>React</h3>
                                 <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark.png" alt="experience icon" class="icon">
+                            <img src="./assets/checkmark.png" alt="experience icon" class="icon" />
                             <div>
                                 <h3>JavaScript</h3>
-                                <p>Basic</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assets/checkmark.png" alt="experience icon" class="icon">
-                            <div>
-                                <h3>TypeScript</h3>
-                                <p>Basic</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assets/checkmark.png" alt="experience icon" class="icon">
-                            <div>
-                                <h3>Material UI</h3>
                                 <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="experience icon" class="icon" />
+                            <div>
+                                <h3>Tailwind</h3>
+                                <p>Experienced</p>
                             </div>
                         </article>
                     </div>
@@ -146,30 +144,37 @@
                     <h2 class="experience-sub-title">Backend Development</h2>
                     <div class="article-container">
                         <article>
-                            <img src="./assets/checkmark.png" alt="experience icon" class="icon">
+                            <img src="./assets/checkmark.png" alt="experience icon" class="icon" />
+                            <div>
+                                <h3>Java</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="experience icon" class="icon" />
+                            <div>
+                                <h3>Python</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="experience icon" class="icon" />
                             <div>
                                 <h3>PostgreSQL</h3>
-                                <p>Basic</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assets/checkmark.png" alt="experience icon" class="icon">
-                            <div>
-                                <h3>Node JS</h3>
                                 <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark.png" alt="experience icon" class="icon">
+                            <img src="./assets/checkmark.png" alt="experience icon" class="icon" />
                             <div>
-                                <h3>Express JS</h3>
-                                <p>Intermediate</p>
+                                <h3>Firebase</h3>
+                                <p>Experienced</p>
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark.png" alt="experience icon" class="icon">
+                            <img src="./assets/checkmark.png" alt="experience icon" class="icon" />
                             <div>
-                                <h3>Git</h3>
+                                <h3>Spring Framework</h3>
                                 <p>Intermediate</p>
                             </div>
                         </article>
@@ -177,69 +182,87 @@
                 </div>
             </div>
         </div>
-        <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'">
+        <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
     </section>
     <section id="projects">
         <p class="section__text__p1">Browse My Recent</p>
         <h1 class="title">Projects</h1>
         <div class="experience-details-container">
             <div class="about-containers">
+                
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/weather-project.jpg" alt="Project 1" class="project-img">
-                    </div>
-                    <h2 class="experience-sub-title project-title">React Weather App</h2>
-                    <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/adityaa-more/react-weather-app'">Github</button>
-                        <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://get-live-weather.netlify.app/'">Live
-                            Demo</button>
-                    </div>
-                </div>
-                <div class="details-container color-container">
-                    <div class="article-container">
-                        <img src="./assets/quiz-project.jpg" alt="Project 2" class="project-img">
+                        <img src="./assets/quiz-project.jpg" alt="Project 2" class="project-img" />
                     </div>
                     <h2 class="experience-sub-title project-title">Online Quiz App</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/adityaa-more/QuizApp'">Github</button>
+                            onclick="location.href='https://github.com/adityaa-more/QuizApp'">
+                            Github
+                        </button>
                         <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://sawaal-jawaab.netlify.app/'">Live
-                            Demo</button>
+                            onclick="location.href='https://sawaal-jawaab.netlify.app/'">
+                            Live Demo
+                        </button>
                     </div>
                 </div>
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/project-3.jpg" alt="Project 3" class="project-img">
+                        <img src="./assets/project-3.jpg" alt="Project 3" class="project-img" />
                     </div>
                     <h2 class="experience-sub-title project-title">3D Portfolio</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/adityaa-more/3d-portfolio">Github</button>
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://adityaa-more.github.io/3d-portfolio/'">Live
-                            Demo</button>
+                            onclick="location.href='https://github.com/adityaa-more/3d-portfolio'">
+                            Github
+                        </button>
+                        <button class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://adityaa-more.github.io/3d-portfolio/'">
+                            Live Demo
+                        </button>
                     </div>
                 </div>
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img src="./assets/weather-project.jpg" alt="Project 1" class="project-img" />
+                    </div>
+                    <h2 class="experience-sub-title project-title">
+                        React Weather App
+                    </h2>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://github.com/adityaa-more/react-weather-app'">
+                            Github
+                        </button>
+                        <button class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://get-live-weather.netlify.app/'">
+                            Live Demo
+                        </button>
+                    </div>
+                </div>
+                
             </div>
         </div>
-        <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'">
+        <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'" />
     </section>
     <section id="contact">
         <p class="section__text__p1">Get in Touch</p>
         <h1 class="title">Contact Me</h1>
         <div class="contact-info-upper-container">
             <div class="contact-info-container">
-                <img src="./assets/email.png" alt="email icon" class="icon contact-icon email-icon">
-                <p><a href="mailto:adityamore896@hotmail.com">adityamore896@hotmail.com</a></p>
+                <img src="./assets/email.png" alt="email icon" class="icon contact-icon email-icon" />
+                <p>
+                    <a href="mailto:adityamore.se@gmail.com">adityamore.se@gmail.com</a>
+                </p>
             </div>
             <div class="contact-info-container">
-                <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon">
-                <p><a href="https://www.linkedin.com/in/aditya-more-myprofile/">LinkedIn</a></p>
+                <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon" />
+                <p>
+                    <a href="https://www.linkedin.com/in/aditya-more-myprofile/">LinkedIn</a>
+                </p>
             </div>
             <div class="contact-info-container">
-                <img src="./assets/whatsapp.png" alt="LinkedIn icon" class="icon contact-icon">
+                <img src="./assets/whatsapp.png" alt="LinkedIn icon" class="icon contact-icon" />
                 <p><a href="https://wa.me/918888052888?text=">WhatsApp</a></p>
             </div>
         </div>
@@ -255,7 +278,7 @@
                 </ul>
             </div>
         </nav>
-        <p>Copyright &#169; 2023 Aditya More. All Rights Reserved.</p>
+        <p>Copyright &#169; 2024 Aditya More. All Rights Reserved.</p>
     </footer>
 
     <script src="script.js"></script>
